@@ -1,5 +1,13 @@
 2001-07-05 Kevin Vandersloot <kfv101@psu.edu>
 
+	*proctable.c (remove_children_from_tree): remove the 
+	e_tree_memory_node_remove call as it seems to cause some
+	infinite looping.
+
+	*also remove some c++ comments
+
+2001-07-05 Kevin Vandersloot <kfv101@psu.edu>
+
 	*prettytable.c (pretty_table_load_path): don't segfault if the
 	directory doesn't exist
 
